--- a/index.html
+++ b/index.html
@@ -1,7 +1,86 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FireLight Keyboards</title>
+    <style>
+        /* Add your CSS styles here */
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+    <!-- Header -->
+    <header>
+        <div>
+            <img src="firelight-logo.png" alt="FireLight Logo">
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#products">Products</a></li>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Hero Section -->
+    <section id="home">
+        <div>
+            <img src="keyboard-hero-image.jpg" alt="FireLight Keyboard">
+            <h1>Illuminate Your Typing Experience</h1>
+            <a href="#products">Explore Keyboards</a>
+        </div>
+    </section>
+
+    <!-- Featured Products -->
+    <section id="products">
+        <h2>Featured Products</h2>
+        <!-- Add product cards here -->
+    </section>
+
+    <!-- About Us Section -->
+    <section id="about">
+        <div>
+            <h2>About Us</h2>
+            <!-- Add about us content here -->
+        </div>
+    </section>
+
+    <!-- Customer Testimonials -->
+    <section>
+        <h2>Customer Testimonials</h2>
+        <!-- Add testimonial quotes or cards here -->
+    </section>
+
+    <!-- Latest Blog Posts -->
+    <section>
+        <h2>Latest Blog Posts</h2>
+        <!-- Add blog post links here -->
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div>
+            <div>
+                <h3>Contact Information</h3>
+                <!-- Add contact information here -->
+            </div>
+            <div>
+                <h3>Follow Us</h3>
+                <!-- Add social media links here -->
+            </div>
+            <div>
+                <ul>
+                    <li><a href="#privacy">Privacy Policy</a></li>
+                    <li><a href="#terms">Terms of Service</a></li>
+					          <li><a href="https://www.example.com/terms" target="_blank">Discord Link!</a></li>
+                    <!-- ADD FOOTER LINKS HERE -->
+                </ul>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
