--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <header>
         <div>
-            <img src="firelight-logo.png" alt="FireLight Logo">
+            <img src="https://media.istockphoto.com/id/1323529010/vector/fire-vector-isolated.jpg?s=612x612&w=0&k=20&c=ta6bKkXZDuqy2H3tRhR79sSl_-fdGhKyoenbbjEr3l0=" alt="">
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
