--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 
         /* Add some space to the content so it's not hidden behind the fixed header */
         body {
-            margin-top: 80px; /* Adjust this value based on the height of your header */
+	    margin: 0;
+	    padding: 0;
+	    margin-top: 50px; /* Adjust this value based on the height of your header */
+	}
         }
 
         /* Some additional styles for the content */
@@ -98,7 +101,7 @@
                 <ul>
                     <li><a href="#privacy">Privacy Policy</a></li>
                     <li><a href="#terms">Terms of Service</a></li>
-					          <li><a href="https://www.example.com/terms" target="_blank">Discord Link!</a></li>
+		    <li><a href="https://discord.com/channels/1162451085278072842/1163621865697312799" target="_blank">Discord Link!</a></li>
                     <!-- ADD FOOTER LINKS HERE -->
                 </ul>
             </div>
