--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <style>
         /* Style for the fixed header */
         header {
-            background-color: #333;
-            color: #fff;
+            background-color: #ffffff;
+            color: #000000;
             padding: 10px;
             text-align: center;
             position: fixed;
