--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
         /* Add some space to the content so it's not hidden behind the fixed header */
         body {
+	    background-color: #000000; /*background color for webpage*/
 	    margin: 0;
 	    padding: 0;
 	    margin-top: 100px; /* Adjust this value based on the height of your header */
