--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         /* Style for the fixed header */
         header {
             background-color: #ffffff;
+	    color: #000000;
             color: #000000;
             padding: 10px;
             text-align: center;
