--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
 
         </div>
     </header>
-    <t>Hello world!</t>
-<!-- Stuff you put here for more links -->
+	<section>
+    		<t>Hello world!</t>
+	</section>
 
 </body>
 </html>
