--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         /* Add some space to the content so it's not hidden behind the fixed header */
         body {
 	    background-color: #000000; /*background color for webpage*/
-	    color: #ffffff;
+	    text-color: #ffffff;
 	    margin: 0;
 	    padding: 0;
 	    margin-top: 200px; /* Adjust this value based on the height of your header */
@@ -46,8 +46,7 @@
         </div>
     </header>
 <body>
-    		<t>Hi kieran!</t>
-
+ Hi boyz!
 
 </body>
 </html>
