--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         /* Add some space to the content so it's not hidden behind the fixed header */
         body {
 	    background-color: #555555; /*background color for webpage*/
+		color: #ffffff;
 	    margin: 0;
 	    padding: 0;
-	    margin-top: 20000px; /* Adjust this value based on the height of your header */
+	    margin-top: 50px; /* Adjust this value based on the height of your header */
 	}
         }
 
