--- a/index.html
+++ b/index.html
@@ -42,12 +42,7 @@
     <header>
         <div>
             <img src="https://media.istockphoto.com/id/1323529010/vector/fire-vector-isolated.jpg?s=612x612&w=0&k=20&c=ta6bKkXZDuqy2H3tRhR79sSl_-fdGhKyoenbbjEr3l0=" alt="" img width="200px" img length="200px">
-		Hi boyz!
         </div>
     </header>
-<body>
-	<p>
-	Hi boyz!
-	</p>
-</body>
+HIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
 </html>
