--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
         body {
 	    background-color: #555555; /*background color for webpage*/
 		color: #ffffff;
-	    margin: 0;
+	    margin: 20;
 	    padding: 0;
 	    margin-top: 50px; /* Adjust this value based on the height of your header */
 	}
-        }
+	footer {
+		background-color: #878787;
+		color: #ffffff;
+		margin: 20;
+		padding: 0;
+	}
 
         /* Some additional styles for the content */
         section {
