--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         body {
 	    background-color: #555555; /*background color for webpage*/
 		color: #ffffff;
-	    margin: 20;
+	    margin: 0;
 	    padding: 0;
 	    margin-top: 50px; /* Adjust this value based on the height of your header */
 	}
 	footer {
 		background-color: #878787;
 		color: #ffffff;
-		margin: 20;
+		margin: 0;
 		padding: 0;
 	}
 
@@ -50,5 +50,10 @@
         Firelight
 	</div>
     </header>
-HIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
+	<body>
+		A whole bunch of text 
+		More text
+		A lot more text
+	</body>
+	<footer>Random Text</footer>
 </html>
