--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
         /* Add some space to the content so it's not hidden behind the fixed header */
         body {
-	    /*background-color: #555555; /*background color for webpage*/
-/*		color: #ffffff;
-*/	    margin: 0;
+	    /*background-color: #555555; background color for webpage*/
+/*		color: #ffffff;*/
+		margin: 0;
 	    padding: 0;
 	    margin-top: 50px; /* Adjust this value based on the height of your header */
 	}
