--- a/index.html
+++ b/index.html
@@ -1,54 +1,4 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FireLight Keyboards</title>
-<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        /* Style for the fixed header */
-        header {
-            background-color: #ffffff;
-	    color: #000000;
-            padding: 10px;
-            text-align: center;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000; /* Ensures the header stays on top of other elements */
-        }
-
-        /* Add some space to the content so it's not hidden behind the fixed header */
-        body {
-	    /*background-color: #555555; background color for webpage*/
-/*		color: #ffffff;*/
-		margin: 0;
-	    padding: 0;
-	    margin-top: 50px; /* Adjust this value based on the height of your header */
-	}
-	
-
-        /* Some additional styles for the content */
-        section {
-            padding: 20px;
-            margin: 20px;
-        }
-    </style>
-</head>
-
-
-    <!-- Header -->
-    <header>
-        <div>
-            <img src="https://media.istockphoto.com/id/1323529010/vector/fire-vector-isolated.jpg?s=612x612&w=0&k=20&c=ta6bKkXZDuqy2H3tRhR79sSl_-fdGhKyoenbbjEr3l0=" alt="" img width="200px" img length="200px">
-        Firelight
-	</div>
-    </header>
-	<body>
-		A whole bunch of text 
-		More text
-		A lot more text
-	</body>
-	<footer>Random Text</footer>
+	Hello World!
 </html>
