--- a/index.html
+++ b/index.html
@@ -3,36 +3,56 @@
 	<header>
 		A header
 	</header>
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
-	Text 
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
+	<p>Text</p>
 	
 </html>
