--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+	<style>
 	body {
             margin: 0; /* Remove default margin */
             font-family: Arial, sans-serif; /* Choose your preferred font */
@@ -19,7 +20,7 @@
             margin-top: 60px; /* Adjust as needed based on the header height */
             padding: 20px;
         }
-	
+	</style>
 	
 	
 	<header>
