--- a/index.html
+++ b/index.html
@@ -1,26 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<style>
-	body {
-            margin: 0; /* Remove default margin */
-            font-family: Arial, sans-serif; /* Choose your preferred font */
-        }
-
-        header {
-            background-color: #333; /* Set background color */
-            padding: 10px; /* Add some padding for better appearance */
-            color: #fff; /* Set text color to white */
-            position: fixed; /* Make the header fixed at the top */
-            width: 100%; /* Occupy the full width of the viewport */
-            top: 0; /* Position at the top */
-        }
-
-        /* Add some spacing to the content below the fixed header */
-        main {
-            margin-top: 60px; /* Adjust as needed based on the header height */
-            padding: 20px;
-        }
-	</style>
+    <link rel="stylesheet" href="style.css">
 	
 	
 	<header>
