--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-	<style>
-    <link rel="stylesheet" href="style.css"></link>
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Link to your external CSS file -->
+    <link rel="stylesheet" href="style.css">
+
+    <title>FireLight - For Keyboards</title>
 	
 	
 	<header>
