--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-	<link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3xkqvpiHGZd4LvBYbGPF8DCt3l_TXWSCSnINX7RXbtyrA-O8dYzJbhGwAZVTWhGb65U0&usqp=CAU" type="image/x-icon">
+	<link rel="icon" href="https://github.com/YourEverydayGuy/KeyBoardProject/blob/main/fire-removebg-preview.png" type="image/x-icon">
     <title>FireLight - For Keyboards</title>
 	
 	
