--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-	<link rel="icon" href="github.com/YoureEverydayGuy/KeyBoardProject/fire-removebg-preview.png/" type="image/x-icon">
+	<link rel="icon" href="https://github.com/YourEverydayGuy/KeyBoardProject/blob/main/fire-removebg-preview.png" type="image/x-icon">
     <title>FireLight - For Keyboards</title>
 	
 	
