--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-	<link rel="icon" href="https://ibb.co/sJ9t2gS" type="image/x-icon">
+	<link rel="icon" img src=href="https://ibb.co/sJ9t2gS"type="image/x-icon">
     <title>FireLight - For Keyboards</title>
 	
 	
