--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
 	<p>Text</p>
 	<p>Text</p>
 	<p>Text</p>
+	<button id="navigateButton" onclick="navigateToPage()">Go to discord!</button>
+	<script>
+        	function navigateToPage() {
+            	// Replace 'targetPage.html' with the actual file path or URL of the page you want to navigate to
+            	window.location.href = 'https://discord.gg/D4MkZTaA';
+		}
+    	</script>
 	<p>Text</p>
 	<p>Text</p>
 	<p>Text</p>
