--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<p>Text</p>
 	<p>Text</p>
 	<p>Text</p>
-	<button id="navigateButton" onclick="navigateToPage()">Go to discord!</button>
+	<a id="navigateButton" onclick="navigateToPage()">Go to discord!</a>
 	<script>
         	function navigateToPage() {
             	// Replace 'targetPage.html' with the actual file path or URL of the page you want to navigate to
