--- a/index.html
+++ b/index.html
@@ -49,13 +49,7 @@
 	<p>Text</p>
 	<p>Text</p>
 	<p>Text</p>
-	<a id="navigateButton" onclick="navigateToPage()">Go to discord!</a>
-	<script>
-        	function navigateToPage() {
-            	// Replace 'targetPage.html' with the actual file path or URL of the page you want to navigate to
-            	window.location.href = 'https://discord.gg/D4MkZTaA';
-		}
-    	</script>
+	<a id="navigateButton" onclick="https://discord.gg/D4MkZTaA" target="_blank">Go to discord!</a>
 	<p>Text</p>
 	<p>Text</p>
 	<p>Text</p>
