--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<p>Text</p>
 	<p>Text</p>
 	<p>Text</p>
-	<a id="navigateButton" onclick="https://discord.gg/D4MkZTaA" target="_blank">Go to discord!</a>
+	<a id="navigateButton" href="https://discord.gg/D4MkZTaA" target="_blank">Go to discord!</a>
 	<p>Text</p>
 	<p>Text</p>
 	<p>Text</p>
