--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 	<p>Text</p>
 <footer>
         <p>FireLight - Keyboard company</p>
-	<a id="navigateButton" href="https://discord.gg/D4MkZTaA" target="_blank">Go to discord!</a>
+	<discordlink>	
+		<a id="navigateButton" href="https://discord.gg/D4MkZTaA" target="_blank">Go to discord!</a>
+	</discordlink>
     </footer>
 </html>
