--- a/index.html
+++ b/index.html
@@ -66,8 +66,6 @@
 	<p>Text</p>
 <footer>
         <p>FireLight - Keyboard company</p>
-	<discordlink>	
-		<a id="navigateButton" href="https://discord.gg/D4MkZTaA" target="_blank">Go to discord!</a>
-	</discordlink>
+	<a id="discordlink" href="https://discord.gg/D4MkZTaA" target="_blank">Go to discord!</a>
     </footer>
 </html>
