--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
 	<p>Text</p>
 	<p>Text</p>
 <footer>
-        <p>FireLight - Keyboard company</p>
-	<a id="discordlink" href="https://discord.gg/D4MkZTaA" target="_blank">Go to discord!</a>
+        <p>FireLight - Keyboard company</p>    
+	<div id="navigateLink">
+        <span><a href="targetPage.html" target="_blank">Go to Another Page</a></span>
+        <!-- Replace 'your-image-url.jpg' with the path to your image -->
+        <img src="https://static-00.iconduck.com/assets.00/discord-icon-2048x2048-nnt62s2u.png" alt="Image Failed To Load">
+    </div>
     </footer>
 </html>
