--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
 <footer>
         <p>FireLight - Keyboard company</p>    
 	<div id="navigateLink">
-        <span><a href="targetPage.html" target="_blank">Go to Another Page</a></span>
-        <!-- Replace 'your-image-url.jpg' with the path to your image -->
+        <span><a href="https://discord.gg/SeVwHq2dNg" target="_blank">Go to Another Page</a></span>
         <img src="https://static-00.iconduck.com/assets.00/discord-icon-2048x2048-nnt62s2u.png" alt="Image Failed To Load">
     </div>
     </footer>
