--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p>FireLight - Keyboard company</p>    
 	<div id="navigateLink">
         <span><a href="https://discord.gg/SeVwHq2dNg" target="_blank">Go to Another Page</a></span>
-        <img src="https://static-00.iconduck.com/assets.00/discord-icon-2048x2048-nnt62s2u.png"  width="50" length="50" lt="Image Failed To Load">
+        <a href ="https://discord.com/invite/SeVwHq2dNg" img src="https://static-00.iconduck.com/assets.00/discord-icon-2048x2048-nnt62s2u.png"  width="50" length="50" lt="Image Failed To Load">
     </div>
     </footer>
 </html>
