--- a/index.html
+++ b/index.html
@@ -65,9 +65,48 @@
 	<p>Text</p>
 	<p>Text</p>
 <footer>
-        <p>FireLight - Keyboard company</p>    
-	<div id="navigateLink">
-        <a href ="https://discord.com/invite/SeVwHq2dNg"> <img src="https://static-00.iconduck.com/assets.00/discord-icon-2048x2048-nnt62s2u.png"  width="50" length="50" lt="Image Failed To Load"></a>
-    </div>
-    </footer>
+                <div class="column">
+            <h3>Column 1</h3>
+            <ul>
+                <li><a href="https://www.example1.com">Link 1</a></li>
+                <li><a href="https://www.example2.com">Link 2</a></li>
+                <li><a href="https://www.example3.com">Link 3</a></li>
+            </ul>
+        </div>
+
+        <div class="column">
+            <h3>Column 2</h3>
+            <ul>
+                <li><a href="https://www.example4.com">Link 4</a></li>
+                <li><a href="https://www.example5.com">Link 5</a></li>
+                <li><a href="https://www.example6.com">Link 6</a></li>
+            </ul>
+        </div>
+
+        <div class="column">
+            <h3>Column 3</h3>
+            <ul>
+                <li><a href="https://www.example7.com">Link 7</a></li>
+                <li><a href="https://www.example8.com">Link 8</a></li>
+                <li><a href="https://www.example9.com">Link 9</a></li>
+            </ul>
+        </div>
+
+        <div class="column">
+            <h3>Column 4</h3>
+            <ul>
+                <li><a href="https://www.example10.com">Link 10</a></li>
+                <li><a href="https://www.example11.com">Link 11</a></li>
+                <li><a href="https://www.example12.com">Link 12</a></li>
+            </ul>
+        </div>
+
+        <div class="column">
+            <h3>Column 5</h3>
+            <ul>
+                <li><a href="https://www.example13.com">Link 13</a></li>
+                <li><a href="https://www.example14.com">Link 14</a></li>
+                <li><a href="https://www.example15.com">Link 15</a></li>
+            </ul>
+        </div>    </footer>
 </html>
