--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 	<p>Text</p>
 <footer>
                 <div class="column">
-            <h3>Column 1</h3>
+            <h3>Socials</h3>
             <ul>
-                <li><a href="https://www.example1.com">Link 1</a></li>
+                <li><a href="https://discord.gg/xPygdkMah6">Join Our Discord!</a></li>
                 <li><a href="https://www.example2.com">Link 2</a></li>
                 <li><a href="https://www.example3.com">Link 3</a></li>
             </ul>
