--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-	<link rel="icon" type="image/x-icon" href="https://github.com/YourEverydayGuy/KeyBoardProject/blob/main/fire-removebg-preview.png">
+	<link rel="icon" type="image/x-icon" href="/main/fire-removebg-preview.png">
     <title>FireLight - For Keyboards</title>
 	
 	
