--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-	<link rel="icon" type="image/x-icon" href="/main/fire-removebg-preview.png">
+	<link rel="icon" type="image/x-icon" href="https://ibb.co/L0sWBM4">
     <title>FireLight - For Keyboards</title>
 	
 	
